[tool.poetry]
name = "PhantomSilhouette"
version = "0.1.0"
description = "Phantom Silhouette: convert normal voice to whisper"
authors = ["zukky <34536327+SuzukiDaishi@users.noreply.github.com>"]

[tool.flake8]
max-line-length = 99
ignore = "E731"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.9.2"
pyworld = "^0.3.2"
matplotlib = "^3.6.2"
scikit-image = "^0.19.3"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
